--- a/DYF/Web.config
+++ b/DYF/Web.config
@@ -9,11 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="mysqlcs" connectionString="server=localhost;user id=root;password=07582231;database=dyftest" providerName="MySql.Data.MySqlClient" />
+    <add name="mysqlcs" connectionString="server=localhost;user id=root;password=07582231;database=Dyf" providerName="MySql.Data.MySqlClient" />
 
-<!--<add name="ConnectionStringName"
+<add name="ssmscs"
     providerName="System.Data.SqlClient"
-    connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\DydDb.mdf;InitialCatalog=DatabaseName;Integrated Security=True;MultipleActiveResultSets=True" />-->
+    connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\Dyf.mdf;InitialCatalog=DyfTest;Integrated Security=True;MultipleActiveResultSets=True" />
 
 </connectionStrings>
   <appSettings>
