--- a/DYF/DYF.csproj
+++ b/DYF/DYF.csproj
@@ -210,6 +210,10 @@
     <Compile Include="Migrations\201708072027122_Adding_TypePesee_Entity.Designer.cs">
       <DependentUpon>201708072027122_Adding_TypePesee_Entity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708170253572_Problem-with-loading-project.cs" />
+    <Compile Include="Migrations\201708170253572_Problem-with-loading-project.Designer.cs">
+      <DependentUpon>201708170253572_Problem-with-loading-project.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Achat.cs" />
     <Compile Include="Models\Bande.cs" />
@@ -248,6 +252,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\materialize-orange-deep-orange.css" />
+    <Content Include="fonts\materialize\material-icons.css" />
+    <Content Include="fonts\materialize\MaterialIcons-Regular.svg" />
     <Content Include="Plugins\DataTable\Buttons-1.3.1\css\buttons.bootstrap.css" />
     <Content Include="Plugins\DataTable\Buttons-1.3.1\css\buttons.bootstrap.min.css" />
     <Content Include="Plugins\DataTable\Buttons-1.3.1\css\buttons.dataTables.css" />
@@ -397,6 +403,13 @@
     <Content Include="fonts\roboto\Roboto-Thin.woff2" />
     <Content Include="Plugins\DataTable\Buttons-1.3.1\css\common.scss" />
     <Content Include="Plugins\DataTable\Buttons-1.3.1\css\mixins.scss" />
+    <Content Include="fonts\materialize\codepoints" />
+    <Content Include="fonts\materialize\MaterialIcons-Regular.eot" />
+    <Content Include="fonts\materialize\MaterialIcons-Regular.ijmap" />
+    <Content Include="fonts\materialize\MaterialIcons-Regular.ttf" />
+    <Content Include="fonts\materialize\MaterialIcons-Regular.woff" />
+    <Content Include="fonts\materialize\MaterialIcons-Regular.woff2" />
+    <Content Include="fonts\materialize\README.md" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
@@ -462,6 +475,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708072027122_Adding_TypePesee_Entity.resx">
       <DependentUpon>201708072027122_Adding_TypePesee_Entity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708170253572_Problem-with-loading-project.resx">
+      <DependentUpon>201708170253572_Problem-with-loading-project.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
