Refactoring Mustjache js templates Improvement of validation process of step 1 Fixing position of div error for datePicker field

--- a/DYF/DYF.csproj
+++ b/DYF/DYF.csproj
@@ -455,7 +455,8 @@
     <Content Include="Views\Pesee\_step2.cshtml" />
     <Content Include="Views\Pesee\_step3.cshtml" />
     <Content Include="Views\Pesee\_step3CardTemplate.cshtml" />
-    <Content Include="Views\Pesee\selectTemplate.cshtml" />
+    <Content Include="Views\MustacheTemplate\selectTemplate.cshtml" />
+    <Content Include="Views\MustacheTemplate\datePickerTemplate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
